pgrx-tests/tests/compile-fail/aggregate-functions-dont-run-forever.stderr
error[E0521]: borrowed data escapes outside of function
  --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:11:1
   |
11 | #[pg_aggregate]
   | ^^^^^^^^^^^^^^^
   | |
   | `fcinfo` is a reference that is only valid in the function body
   | `fcinfo` escapes the function body here
   | lifetime `'fcx` defined here
   | argument requires that `'fcx` must outlive `'static`
   |
   = note: this error originates in the attribute macro `::pgrx::pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0521]: borrowed data escapes outside of function
  --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:49:1
   |
49 | #[pg_aggregate]
   | ^^^^^^^^^^^^^^^
   | |
   | `fcinfo` is a reference that is only valid in the function body
   | `fcinfo` escapes the function body here
   | lifetime `'fcx` defined here
   | argument requires that `'fcx` must outlive `'static`
   |
   = note: this error originates in the attribute macro `::pgrx::pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0521]: borrowed data escapes outside of function
  --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:72:1
   |
72 | #[pg_aggregate]
   | ^^^^^^^^^^^^^^^
   | |
   | `fcinfo` is a reference that is only valid in the function body
   | `fcinfo` escapes the function body here
   | lifetime `'fcx` defined here
   | argument requires that `'fcx` must outlive `'static`
   |
   = note: this error originates in the attribute macro `::pgrx::pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0521]: borrowed data escapes outside of function
   --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:119:1
    |
119 | #[pg_aggregate]
    | ^^^^^^^^^^^^^^^
    | |
    | `fcinfo` is a reference that is only valid in the function body
    | `fcinfo` escapes the function body here
    | lifetime `'fcx` defined here
    | argument requires that `'fcx` must outlive `'static`
    |
    = note: this error originates in the attribute macro `::pgrx::pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0521]: borrowed data escapes outside of function
   --> tests/compile-fail/aggregate-functions-dont-run-forever.rs:151:1
    |
151 | #[pg_aggregate]
    | ^^^^^^^^^^^^^^^
    | |
    | `fcinfo` is a reference that is only valid in the function body
    | `fcinfo` escapes the function body here
    | lifetime `'fcx` defined here
    | argument requires that `'fcx` must outlive `'static`
    |
    = note: this error originates in the attribute macro `::pgrx::pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)
